// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`require-ensure override should implement default webpack behavior: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 					var link = document.createElement('link');
+/******/ 					var link = (function prelinkBuilder(
+/******/ 					  installedChunks,
+/******/ 					  chunkId,
+/******/ 					  scriptUrlResolver,
+/******/ 					  scriptOptionsResolver
+/******/ 					) {
+/******/ 					  var link = document.createElement('link');
+/******/ 					  var url = scriptUrlResolver(installedChunks, chunkId, 'prefetch');
+/******/ 					  var options = extend(
+/******/ 					    {
+/******/ 					      // most compatible type
+/******/ 					      type: 'text/javascript',
+/******/ 					      charset: 'utf-8',
+/******/ 					      rel: 'prefetch',
+/******/ 					      as: 'script'
+/******/ 					    },
+/******/ 					    scriptOptionsResolver(installedChunks, chunkId, url, 'prefetch')
+/******/ 					  );
+/******/ 					  extend(link, options);
+/******/ 					  link.href = url;
+/******/ 					  return link;
@@ Change 2 @@
-/******/ 					if (__webpack_require__.nc) {
-/******/ 						link.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 					}
-/******/ 					link.rel = \\"prefetch\\";
-/******/ 					link.as = \\"script\\";
-/******/ 					link.href = jsonpScriptSrc(chunkId);
+/******/ 					  function extend(acc, src) {
+/******/ 					    if (src) {
+/******/ 					      for (var key in src) {
+/******/ 					        if (src.hasOwnProperty(key)) {
+/******/ 					          acc[key] = src[key];
+/******/ 					        }
+/******/ 					      }
+/******/ 					    }
+/******/
+/******/ 					    return acc;
+/******/ 					  }
+/******/ 					})(installedChunks, chunkId, scriptUrlResolver, scriptOptionsResolver);
@@ Change 3 @@
+/******/ 	function scriptUrlResolver(installedChunks, chunkId, mode) {
+/******/ 	  var result = (originalUrl = jsonpScriptSrc(chunkId));
@@ Change 4 @@
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptOptionsResolver(installedChunks, chunkId, url, mode) {
+/******/ 	  var result = {};
+/******/
+/******/ 	  mode = mode || 'load';
+/******/ 	  result.type = 'module';
+/******/ 	  result.timeout = 60;
+/******/ 	  if (__webpack_require__.nc) {
+/******/ 	    result.nonce = __webpack_require__.nc;
+/******/ 	  }
+/******/ 	  if (url.indexOf(window.location.origin + '/') !== 0) {
+/******/ 	    result.crossOrigin = 'anonymous';
+/******/ 	  }
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptBuilder(src, options, onSuccess, onError) {
+/******/ 	  var script, timeout;
+/******/
+/******/ 	  var onScriptComplete = function(error) {
+/******/ 	    onScriptComplete = function() {}; // avoid mem leaks in IE.
+/******/
+/******/ 	    script.onerror = script.onload = script.onreadystatechange = null;
+/******/ 	    clearTimeout(timeout);
+/******/ 	    error ? onError(error) : onSuccess();
+/******/ 	  };
+/******/
+/******/ 	  try {
+/******/ 	    options = extend(
+/******/ 	      {
+/******/ 	        // most compatible type
+/******/ 	        type: 'text/javascript',
+/******/ 	        charset: 'utf-8',
+/******/ 	        timeout: 20,
+/******/ 	        async: true
+/******/ 	      },
+/******/ 	      options
+/******/ 	    );
+/******/ 	    script = document.createElement('script');
+/******/ 	    extend(script, options);
+/******/
+/******/ 	    script.onload = function() {
+/******/ 	      onScriptComplete();
+/******/ 	    };
+/******/
+/******/ 	    timeout = setTimeout(function() {
+/******/ 	      onScriptComplete(error('timeout'));
+/******/ 	    }, options.timeout * 1000);
+/******/
+/******/ 	    script.onerror = function(event) {
+/******/ 	      onScriptComplete(
+/******/ 	        error(event && (event.type === 'load' ? 'missing' : event.type))
+/******/ 	      );
+/******/ 	    };
+/******/
+/******/ 	    script.onreadystatechange = function() {
+/******/ 	      // for compatibility with old IE
+/******/ 	      if (script.readyState === 'complete' || script.readyState === 'loaded') {
+/******/ 	        onScriptComplete(); // there is no way to catch loading errors in IE8
+/******/ 	      }
+/******/ 	    };
+/******/
+/******/ 	    script.src = src;
+/******/ 	  } catch (e) {
+/******/ 	    clearTimeout(timeout);
+/******/ 	    timeout = setTimeout(onScriptComplete, 0, error('script'));
+/******/ 	  }
+/******/
+/******/ 	  return script;
+/******/
+/******/ 	  function error(reason) {
+/******/ 	    var error = new Error('Failed to load resource');
+/******/ 	    error.type = reason;
+/******/ 	    return error;
+/******/ 	  }
+/******/
+/******/ 	  function extend(acc, src) {
+/******/ 	    if (src) {
+/******/ 	      for (var key in src) {
+/******/ 	        if (src.hasOwnProperty(key)) {
+/******/ 	          acc[key] = src[key];
+/******/ 	        }
+/******/ 	      }
+/******/ 	    }
+/******/
+/******/ 	    return acc;
+/******/ 	  }
+/******/ 	}
+/******/
+/******/ 	function scriptLoadHandler(installedChunks, chunkId) {
+/******/ 	  var result = null;
+/******/
+/******/ 	  return Promise.resolve(result);
+/******/ 	}
+/******/
+/******/ 	function scriptErrorHandler(installedChunks, chunkId, originalError) {
+/******/ 	  return Promise.reject(originalError);
+/******/ 	}
+/******/
+/******/
@@ Change 5 @@
-/******/ 		// JSONP chunk loading for javascript
+/******/ 		var result = (function(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		) {
+/******/ 		  // JSONP chunk loading for javascript
+/******/ 		  var INSTALLED = 0;
+/******/ 		  var PROMISE_RESOLVE = 0;
+/******/ 		  var PROMISE_REJECT = 1;
+/******/ 		  var LOAD_PROMISE = 2;
+/******/ 		  var installedChunkData = installedChunks[chunkId];
@@ Change 6 @@
-/******/ 		var installedChunkData = installedChunks[chunkId];
-/******/ 		if(installedChunkData !== 0) { // 0 means \\"already installed\\".
+/******/ 		  if (installedChunkData === INSTALLED || installedChunkData) {
+/******/ 		    return installedChunkData === INSTALLED
+/******/ 		      ? Promise.resolve()
+/******/ 		      : installedChunkData[LOAD_PROMISE];
+/******/ 		  }
@@ Change 7 @@
-/******/ 			// a Promise means \\"currently loading\\".
-/******/ 			if(installedChunkData) {
-/******/ 				promises.push(installedChunkData[2]);
-/******/ 			} else {
-/******/ 				// setup Promise in chunk cache
-/******/ 				var promise = new Promise(function(resolve, reject) {
-/******/ 					installedChunkData = installedChunks[chunkId] = [resolve, reject];
-/******/ 				});
-/******/ 				promises.push(installedChunkData[2] = promise);
+/******/ 		  var url, options, script, error;
+/******/ 		  var currentStackError = new Error(); // create error before stack unwound to get useful stacktrace later
@@ Change 8 @@
-/******/ 				// start chunk loading
-/******/ 				var script = document.createElement('script');
-/******/ 				var onScriptComplete;
+/******/ 		  installedChunkData = installedChunks[chunkId] = [];
+/******/ 		  installedChunkData[LOAD_PROMISE] = new Promise(function(resolve, reject) {
+/******/ 		    installedChunkData[PROMISE_RESOLVE] = resolve;
+/******/ 		    installedChunkData[PROMISE_REJECT] = reject;
+/******/ 		  })
+/******/ 		    .catch(setError)
+/******/ 		    .then(checkScriptLoaded)
+/******/ 		    .then(onLoad)
+/******/ 		    .catch(onError);
+/******/ 		  Promise.resolve()
+/******/ 		    .then(resolveUrlAndOptions)
+/******/ 		    .then(buildScript)
+/******/ 		    .then(setScript)
+/******/ 		    .then(appendScript)
+/******/ 		    .catch(installedChunkData[PROMISE_REJECT]);
+/******/ 		  return installedChunkData[LOAD_PROMISE];
@@ Change 9 @@
-/******/ 				script.charset = 'utf-8';
-/******/ 				script.timeout = 120;
-/******/ 				if (__webpack_require__.nc) {
-/******/ 					script.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 				}
-/******/ 				script.src = jsonpScriptSrc(chunkId);
+/******/ 		  function checkScriptLoaded() {
+/******/ 		    var chunk = installedChunks[chunkId];
+/******/ 		    var isChunkComplete = chunk === INSTALLED; // ignore any errors if chunk is loaded
@@ Change 10 @@
-/******/ 				// create error before stack unwound to get useful stacktrace later
-/******/ 				var error = new Error();
-/******/ 				onScriptComplete = function (event) {
-/******/ 					// avoid mem leaks in IE.
-/******/ 					script.onerror = script.onload = null;
-/******/ 					clearTimeout(timeout);
-/******/ 					var chunk = installedChunks[chunkId];
-/******/ 					if(chunk !== 0) {
-/******/ 						if(chunk) {
-/******/ 							var errorType = event && (event.type === 'load' ? 'missing' : event.type);
-/******/ 							var realSrc = event && event.target && event.target.src;
-/******/ 							error.message = 'Loading chunk ' + chunkId + ' failed.\\\\n(' + errorType + ': ' + realSrc + ')';
-/******/ 							error.name = 'ChunkLoadError';
-/******/ 							error.type = errorType;
-/******/ 							error.request = realSrc;
-/******/ 							chunk[1](error);
-/******/ 						}
-/******/ 						installedChunks[chunkId] = undefined;
-/******/ 					}
-/******/ 				};
-/******/ 				var timeout = setTimeout(function(){
-/******/ 					onScriptComplete({ type: 'timeout', target: script });
-/******/ 				}, 120000);
-/******/ 				script.onerror = script.onload = onScriptComplete;
-/******/ 				document.head.appendChild(script);
-/******/ 			}
+/******/ 		    if (isChunkComplete) {
+/******/ 		      return;
+/******/ 		    }
+/******/
+/******/ 		    installedChunks[chunkId] = null; // not 'undefined' for prevent useless prefetching
+/******/
+/******/ 		    error = error || currentStackError;
+/******/ 		    error.type = error.type || 'missing';
+/******/ 		    error.name = 'ChunkLoadError';
+/******/ 		    error.message =
+/******/ 		      'Loading chunk ' +
+/******/ 		      chunkId +
+/******/ 		      ' failed.\\\\n(' +
+/******/ 		      error.type +
+/******/ 		      ': ' +
+/******/ 		      script.src +
+/******/ 		      ')';
+/******/ 		    error.request = script.src; // Extra fields
+/******/
+/******/ 		    error.chunkId = chunkId;
+/******/ 		    throw error;
+/******/ 		  }
+/******/
+/******/ 		  function buildScript() {
+/******/ 		    // scriptBuilder can be asynchronous for old school strategies like \`blob loading\`
+/******/ 		    return scriptBuilder(
+/******/ 		      url,
+/******/ 		      options,
+/******/ 		      installedChunkData[PROMISE_RESOLVE],
+/******/ 		      installedChunkData[PROMISE_REJECT]
+/******/ 		    );
+/******/ 		  }
+/******/
+/******/ 		  function resolveUrlAndOptions() {
+/******/ 		    url = scriptUrlResolver(installedChunks, chunkId, 'load');
+/******/ 		    options = scriptOptionsResolver(installedChunks, chunkId, url, 'load');
+/******/ 		  }
+/******/
+/******/ 		  function appendScript() {
+/******/ 		    document.getElementsByTagName('head')[0].appendChild(script);
+/******/ 		  }
+/******/
+/******/ 		  function setError(_error) {
+/******/ 		    error = _error;
+/******/ 		  }
+/******/
+/******/ 		  function setScript(_script) {
+/******/ 		    script = _script;
+/******/ 		  }
+/******/
+/******/ 		  function onLoad() {
+/******/ 		    return scriptLoadHandler(installedChunks, chunkId);
+/******/ 		  }
+/******/
+/******/ 		  function onError(error) {
+/******/ 		    return scriptErrorHandler(installedChunks, chunkId, error);
+/******/ 		  }
+/******/ 		})(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		);
+/******/
+/******/ 		if (result) {
+/******/ 		  promises.push.apply(promises, [].concat(result));
@@ Change 11 @@
+/******/
@@ Change 12 @@
-/******/ 					var link = document.createElement('link');
+/******/ 					var link = (function prelinkBuilder(
+/******/ 					  installedChunks,
+/******/ 					  chunkId,
+/******/ 					  scriptUrlResolver,
+/******/ 					  scriptOptionsResolver
+/******/ 					) {
+/******/ 					  var link = document.createElement('link');
+/******/ 					  var url = scriptUrlResolver(installedChunks, chunkId, 'preload');
+/******/ 					  var options = extend(
+/******/ 					    {
+/******/ 					      // most compatible type
+/******/ 					      type: 'text/javascript',
+/******/ 					      charset: 'utf-8',
+/******/ 					      rel: 'preload',
+/******/ 					      as: 'script'
+/******/ 					    },
+/******/ 					    scriptOptionsResolver(installedChunks, chunkId, url, 'preload')
+/******/ 					  );
+/******/ 					  extend(link, options);
+/******/ 					  link.href = url;
+/******/ 					  return link;
@@ Change 13 @@
-/******/ 					link.charset = 'utf-8';
-/******/ 					if (__webpack_require__.nc) {
-/******/ 						link.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 					}
-/******/ 					link.rel = \\"preload\\";
-/******/ 					link.as = \\"script\\";
-/******/ 					link.href = jsonpScriptSrc(chunkId);
+/******/ 					  function extend(acc, src) {
+/******/ 					    if (src) {
+/******/ 					      for (var key in src) {
+/******/ 					        if (src.hasOwnProperty(key)) {
+/******/ 					          acc[key] = src[key];
+/******/ 					        }
+/******/ 					      }
+/******/ 					    }
+/******/
+/******/ 					    return acc;
+/******/ 					  }
+/******/ 					})(installedChunks, chunkId, scriptUrlResolver, scriptOptionsResolver);
"
`;

exports[`require-ensure override should skip defaults on custom behavior: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 					var link = document.createElement('link');
+/******/ 					var link = (function prelinkBuilder(
+/******/ 					  installedChunks,
+/******/ 					  chunkId,
+/******/ 					  scriptUrlResolver,
+/******/ 					  scriptOptionsResolver
+/******/ 					) {
+/******/ 					  var link = document.createElement('link');
+/******/ 					  var url = scriptUrlResolver(installedChunks, chunkId, 'prefetch');
+/******/ 					  var options = extend(
+/******/ 					    {
+/******/ 					      // most compatible type
+/******/ 					      type: 'text/javascript',
+/******/ 					      charset: 'utf-8',
+/******/ 					      rel: 'prefetch',
+/******/ 					      as: 'script'
+/******/ 					    },
+/******/ 					    scriptOptionsResolver(installedChunks, chunkId, url, 'prefetch')
+/******/ 					  );
+/******/ 					  extend(link, options);
+/******/ 					  link.href = url;
+/******/ 					  return link;
@@ Change 2 @@
-/******/ 					if (__webpack_require__.nc) {
-/******/ 						link.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 					}
-/******/ 					link.rel = \\"prefetch\\";
-/******/ 					link.as = \\"script\\";
-/******/ 					link.href = jsonpScriptSrc(chunkId);
+/******/ 					  function extend(acc, src) {
+/******/ 					    if (src) {
+/******/ 					      for (var key in src) {
+/******/ 					        if (src.hasOwnProperty(key)) {
+/******/ 					          acc[key] = src[key];
+/******/ 					        }
+/******/ 					      }
+/******/ 					    }
+/******/
+/******/ 					    return acc;
+/******/ 					  }
+/******/ 					})(installedChunks, chunkId, scriptUrlResolver, scriptOptionsResolver);
@@ Change 3 @@
+/******/ 	function scriptUrlResolver(installedChunks, chunkId, mode) {
+/******/ 	  var result = (originalUrl = jsonpScriptSrc(chunkId));
@@ Change 4 @@
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptOptionsResolver(installedChunks, chunkId, url, mode) {
+/******/ 	  var result = {};
+/******/
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptBuilder(src, options, onSuccess, onError) {
+/******/ 	  var script, timeout;
+/******/
+/******/ 	  var onScriptComplete = function(error) {
+/******/ 	    onScriptComplete = function() {}; // avoid mem leaks in IE.
+/******/
+/******/ 	    script.onerror = script.onload = script.onreadystatechange = null;
+/******/ 	    clearTimeout(timeout);
+/******/ 	    error ? onError(error) : onSuccess();
+/******/ 	  };
+/******/
+/******/ 	  try {
+/******/ 	    options = extend(
+/******/ 	      {
+/******/ 	        // most compatible type
+/******/ 	        type: 'text/javascript',
+/******/ 	        charset: 'utf-8',
+/******/ 	        timeout: 20,
+/******/ 	        async: true
+/******/ 	      },
+/******/ 	      options
+/******/ 	    );
+/******/ 	    script = document.createElement('script');
+/******/ 	    extend(script, options);
+/******/
+/******/ 	    script.onload = function() {
+/******/ 	      onScriptComplete();
+/******/ 	    };
+/******/
+/******/ 	    timeout = setTimeout(function() {
+/******/ 	      onScriptComplete(error('timeout'));
+/******/ 	    }, options.timeout * 1000);
+/******/
+/******/ 	    script.onerror = function(event) {
+/******/ 	      onScriptComplete(
+/******/ 	        error(event && (event.type === 'load' ? 'missing' : event.type))
+/******/ 	      );
+/******/ 	    };
+/******/
+/******/ 	    script.onreadystatechange = function() {
+/******/ 	      // for compatibility with old IE
+/******/ 	      if (script.readyState === 'complete' || script.readyState === 'loaded') {
+/******/ 	        onScriptComplete(); // there is no way to catch loading errors in IE8
+/******/ 	      }
+/******/ 	    };
+/******/
+/******/ 	    script.src = src;
+/******/ 	  } catch (e) {
+/******/ 	    clearTimeout(timeout);
+/******/ 	    timeout = setTimeout(onScriptComplete, 0, error('script'));
+/******/ 	  }
+/******/
+/******/ 	  return script;
+/******/
+/******/ 	  function error(reason) {
+/******/ 	    var error = new Error('Failed to load resource');
+/******/ 	    error.type = reason;
+/******/ 	    return error;
+/******/ 	  }
+/******/
+/******/ 	  function extend(acc, src) {
+/******/ 	    if (src) {
+/******/ 	      for (var key in src) {
+/******/ 	        if (src.hasOwnProperty(key)) {
+/******/ 	          acc[key] = src[key];
+/******/ 	        }
+/******/ 	      }
+/******/ 	    }
+/******/
+/******/ 	    return acc;
+/******/ 	  }
+/******/ 	}
+/******/
+/******/ 	function scriptLoadHandler(installedChunks, chunkId) {
+/******/ 	  var result = null;
+/******/
+/******/ 	  return Promise.resolve(result);
+/******/ 	}
+/******/
+/******/ 	function scriptErrorHandler(installedChunks, chunkId, originalError) {
+/******/ 	  return Promise.reject(originalError);
+/******/ 	}
+/******/
+/******/
@@ Change 5 @@
-/******/ 		// JSONP chunk loading for javascript
+/******/ 		var result = (function(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		) {
+/******/ 		  // JSONP chunk loading for javascript
+/******/ 		  var INSTALLED = 0;
+/******/ 		  var PROMISE_RESOLVE = 0;
+/******/ 		  var PROMISE_REJECT = 1;
+/******/ 		  var LOAD_PROMISE = 2;
+/******/ 		  var installedChunkData = installedChunks[chunkId];
@@ Change 6 @@
-/******/ 		var installedChunkData = installedChunks[chunkId];
-/******/ 		if(installedChunkData !== 0) { // 0 means \\"already installed\\".
+/******/ 		  if (installedChunkData === INSTALLED || installedChunkData) {
+/******/ 		    return installedChunkData === INSTALLED
+/******/ 		      ? Promise.resolve()
+/******/ 		      : installedChunkData[LOAD_PROMISE];
+/******/ 		  }
@@ Change 7 @@
-/******/ 			// a Promise means \\"currently loading\\".
-/******/ 			if(installedChunkData) {
-/******/ 				promises.push(installedChunkData[2]);
-/******/ 			} else {
-/******/ 				// setup Promise in chunk cache
-/******/ 				var promise = new Promise(function(resolve, reject) {
-/******/ 					installedChunkData = installedChunks[chunkId] = [resolve, reject];
-/******/ 				});
-/******/ 				promises.push(installedChunkData[2] = promise);
+/******/ 		  var url, options, script, error;
+/******/ 		  var currentStackError = new Error(); // create error before stack unwound to get useful stacktrace later
@@ Change 8 @@
-/******/ 				// start chunk loading
-/******/ 				var script = document.createElement('script');
-/******/ 				var onScriptComplete;
+/******/ 		  installedChunkData = installedChunks[chunkId] = [];
+/******/ 		  installedChunkData[LOAD_PROMISE] = new Promise(function(resolve, reject) {
+/******/ 		    installedChunkData[PROMISE_RESOLVE] = resolve;
+/******/ 		    installedChunkData[PROMISE_REJECT] = reject;
+/******/ 		  })
+/******/ 		    .catch(setError)
+/******/ 		    .then(checkScriptLoaded)
+/******/ 		    .then(onLoad)
+/******/ 		    .catch(onError);
+/******/ 		  Promise.resolve()
+/******/ 		    .then(resolveUrlAndOptions)
+/******/ 		    .then(buildScript)
+/******/ 		    .then(setScript)
+/******/ 		    .then(appendScript)
+/******/ 		    .catch(installedChunkData[PROMISE_REJECT]);
+/******/ 		  return installedChunkData[LOAD_PROMISE];
@@ Change 9 @@
-/******/ 				script.charset = 'utf-8';
-/******/ 				script.timeout = 120;
-/******/ 				if (__webpack_require__.nc) {
-/******/ 					script.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 				}
-/******/ 				script.src = jsonpScriptSrc(chunkId);
+/******/ 		  function checkScriptLoaded() {
+/******/ 		    var chunk = installedChunks[chunkId];
+/******/ 		    var isChunkComplete = chunk === INSTALLED; // ignore any errors if chunk is loaded
@@ Change 10 @@
-/******/ 				// create error before stack unwound to get useful stacktrace later
-/******/ 				var error = new Error();
-/******/ 				onScriptComplete = function (event) {
-/******/ 					// avoid mem leaks in IE.
-/******/ 					script.onerror = script.onload = null;
-/******/ 					clearTimeout(timeout);
-/******/ 					var chunk = installedChunks[chunkId];
-/******/ 					if(chunk !== 0) {
-/******/ 						if(chunk) {
-/******/ 							var errorType = event && (event.type === 'load' ? 'missing' : event.type);
-/******/ 							var realSrc = event && event.target && event.target.src;
-/******/ 							error.message = 'Loading chunk ' + chunkId + ' failed.\\\\n(' + errorType + ': ' + realSrc + ')';
-/******/ 							error.name = 'ChunkLoadError';
-/******/ 							error.type = errorType;
-/******/ 							error.request = realSrc;
-/******/ 							chunk[1](error);
-/******/ 						}
-/******/ 						installedChunks[chunkId] = undefined;
-/******/ 					}
-/******/ 				};
-/******/ 				var timeout = setTimeout(function(){
-/******/ 					onScriptComplete({ type: 'timeout', target: script });
-/******/ 				}, 120000);
-/******/ 				script.onerror = script.onload = onScriptComplete;
-/******/ 				document.head.appendChild(script);
-/******/ 			}
+/******/ 		    if (isChunkComplete) {
+/******/ 		      return;
+/******/ 		    }
+/******/
+/******/ 		    installedChunks[chunkId] = null; // not 'undefined' for prevent useless prefetching
+/******/
+/******/ 		    error = error || currentStackError;
+/******/ 		    error.type = error.type || 'missing';
+/******/ 		    error.name = 'ChunkLoadError';
+/******/ 		    error.message =
+/******/ 		      'Loading chunk ' +
+/******/ 		      chunkId +
+/******/ 		      ' failed.\\\\n(' +
+/******/ 		      error.type +
+/******/ 		      ': ' +
+/******/ 		      script.src +
+/******/ 		      ')';
+/******/ 		    error.request = script.src; // Extra fields
+/******/
+/******/ 		    error.chunkId = chunkId;
+/******/ 		    throw error;
+/******/ 		  }
+/******/
+/******/ 		  function buildScript() {
+/******/ 		    // scriptBuilder can be asynchronous for old school strategies like \`blob loading\`
+/******/ 		    return scriptBuilder(
+/******/ 		      url,
+/******/ 		      options,
+/******/ 		      installedChunkData[PROMISE_RESOLVE],
+/******/ 		      installedChunkData[PROMISE_REJECT]
+/******/ 		    );
+/******/ 		  }
+/******/
+/******/ 		  function resolveUrlAndOptions() {
+/******/ 		    url = scriptUrlResolver(installedChunks, chunkId, 'load');
+/******/ 		    options = scriptOptionsResolver(installedChunks, chunkId, url, 'load');
+/******/ 		  }
+/******/
+/******/ 		  function appendScript() {
+/******/ 		    document.getElementsByTagName('head')[0].appendChild(script);
+/******/ 		  }
+/******/
+/******/ 		  function setError(_error) {
+/******/ 		    error = _error;
+/******/ 		  }
+/******/
+/******/ 		  function setScript(_script) {
+/******/ 		    script = _script;
+/******/ 		  }
+/******/
+/******/ 		  function onLoad() {
+/******/ 		    return scriptLoadHandler(installedChunks, chunkId);
+/******/ 		  }
+/******/
+/******/ 		  function onError(error) {
+/******/ 		    return scriptErrorHandler(installedChunks, chunkId, error);
+/******/ 		  }
+/******/ 		})(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		);
+/******/
+/******/ 		if (result) {
+/******/ 		  promises.push.apply(promises, [].concat(result));
@@ Change 11 @@
+/******/
@@ Change 12 @@
-/******/ 					var link = document.createElement('link');
+/******/ 					var link = (function prelinkBuilder(
+/******/ 					  installedChunks,
+/******/ 					  chunkId,
+/******/ 					  scriptUrlResolver,
+/******/ 					  scriptOptionsResolver
+/******/ 					) {
+/******/ 					  var link = document.createElement('link');
+/******/ 					  var url = scriptUrlResolver(installedChunks, chunkId, 'preload');
+/******/ 					  var options = extend(
+/******/ 					    {
+/******/ 					      // most compatible type
+/******/ 					      type: 'text/javascript',
+/******/ 					      charset: 'utf-8',
+/******/ 					      rel: 'preload',
+/******/ 					      as: 'script'
+/******/ 					    },
+/******/ 					    scriptOptionsResolver(installedChunks, chunkId, url, 'preload')
+/******/ 					  );
+/******/ 					  extend(link, options);
+/******/ 					  link.href = url;
+/******/ 					  return link;
@@ Change 13 @@
-/******/ 					link.charset = 'utf-8';
-/******/ 					if (__webpack_require__.nc) {
-/******/ 						link.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 					}
-/******/ 					link.rel = \\"preload\\";
-/******/ 					link.as = \\"script\\";
-/******/ 					link.href = jsonpScriptSrc(chunkId);
+/******/ 					  function extend(acc, src) {
+/******/ 					    if (src) {
+/******/ 					      for (var key in src) {
+/******/ 					        if (src.hasOwnProperty(key)) {
+/******/ 					          acc[key] = src[key];
+/******/ 					        }
+/******/ 					      }
+/******/ 					    }
+/******/
+/******/ 					    return acc;
+/******/ 					  }
+/******/ 					})(installedChunks, chunkId, scriptUrlResolver, scriptOptionsResolver);
"
`;
